Fix alignment

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -82,6 +82,7 @@ fieldset
   .navigation-wrapper
     display: flex
     justify-content: space-between
+    align-items: center
     max-width: 1000px
     margin: 0 auto
 
